--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 	<body>
 		<h1>Git</h1>
-		<h2>Trabalhando em equipe com controle e seguranca</h2>
+		<h2>  Trabalhando em equipe com controle e seguranca</h2>
 		
 		<ul>
-			<li>Fazer backup do seu projeto nao e o bastante para desfazer 
+			<li>  Fazer backup do seu projeto nao e o bastante para desfazer 
 			alteracoes com seguranca e eficiencia</li>
 			
 			<li>Experimente solucoes alternativas em seu codigo sem arriscar 
@@ -17,7 +17,7 @@
 			<li>Varias copias do mesmo ambiente, cada um com uma alteracao 
 			do sistema</li>
 			
-			<li>E tudo isso sem precisar de conexao com a internet</li>
+			<li>E tudo isso sem precisar de conexao com a internet, é o máximo!!</li>
 		</ul>
 	</body>
 
